--- a/src/AppBundle/Resources/views/Widget/banner.html.twig
+++ b/src/AppBundle/Resources/views/Widget/banner.html.twig
@@ -2,7 +2,9 @@
     {#<br />#}
     {#<a href="{{ banner.url }}"><img src="{{ banner.file.path }}" style="width: 240px" title="{{ banner.title }}" alt="{{ banner.title }}"></a>#}
 {#{% endif %}#}
+{% if banner.file.path is defined %}
 <br />
 <div class="text-right">
-    <a href="http://mail.ru" target="_blank"><img src="{{ asset('bundles/app/images/banner.png') }}"></a>
+    <a href="{{ banner.url }}" target="_blank"><img src="{{ banner.file.path }}" style="max-width: 240px;" title="{{ banner.title }}"/></a>
 </div>
+{% endif %}
