--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -9,13 +9,22 @@
         <script src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
         <script src="{{ asset('assets/vendor/owl.carousel/dist/owl.carousel.min.js') }}"></script>
         <script src="{{ asset('assets/vendor/chosen/chosen.jquery.min.js') }}"></script>
+        <script src="{{ asset('assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js') }}"></script>
 
         <script src="{{ asset('assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js') }}"></script>
 
         <script src="{{ asset('assets/vendor/hinclude/hinclude.js') }}"></script>
 
         <script src="{{ asset('bundles/app/js/main.js') }}"></script>
-
+        <script>
+            $(document).ready(function() {
+                $('.multiselect').multiselect({
+                    maxHeight: 300,
+//                            numberDisplayed: 5,
+                    includeSelectAllOption: true
+                });
+            });
+        </script>
     {% endblock %}
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('assets/vendor/reset-css/reset.css') }}">
@@ -26,6 +35,7 @@
         <link rel="stylesheet" href="{{ asset('assets/vendor/chosen/chosen.min.css') }}">
 
         {#<link rel="stylesheet" href="{{ asset('bundles/app/css/checkbox.css') }}">#}
+        <link href="{{ asset('assets/vendor/bootstrap-multiselect/dist/css/bootstrap-multiselect.css') }}" rel="stylesheet">
         {% stylesheets "@AppBundle/Resources/public/less/common.less" %}
         <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="all" />
         {% endstylesheets %}
