--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -150,6 +150,7 @@ nav{
             float: none;
             display:table-cell;
             text-transform: @uppercase;
+            border-top: 1px solid #FC113C;
             &.active{
                 //border-bottom: 5px solid #004889;
             }
@@ -627,4 +628,8 @@ th.prev, th.next, th.picker-switch{
 }
 .btn.btn-default.dropdown-toggle:hover{
     background: none;
+}
+nav .navbar-nav li.active a:hover{
+    color: #FFFFFF;
+    background: #fc113c;
 }
