--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -131,6 +131,7 @@ nav .navbar-nav li {
   float: none;
   display: table-cell;
   text-transform: uppercase;
+  border-top: 1px solid #FC113C;
 }
 nav .navbar-nav li.active a {
   color: #FFFFFF;
@@ -572,4 +573,8 @@ th.picker-switch {
 }
 .btn.btn-default.dropdown-toggle:hover {
   background: none;
+}
+nav .navbar-nav li.active a:hover {
+  color: #FFFFFF;
+  background: #fc113c;
 }
