--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -37,6 +37,7 @@
                 </div>
                 <div class="form-group">
                     {{ form_widget(form.submit) }}
+                    <a href="{{ path('event_add') }}" style="padding-left: 50px;">Добавить событие</a>
                 </div>
             </form>
         </div>
