--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -20,6 +20,8 @@ body {
   font-family: 'HelveticaNeue-Light';
   background: #EEEEEE;
   min-height: 100%;
+  margin: 0;
+  overflow-x: hidden;
 }
 a {
   cursor: pointer !important;
@@ -34,6 +36,24 @@ a:hover {
 }
 .btn-primary:hover {
   background: #2a2a2a;
+}
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary {
+  background: #383838;
+  border: 1px solid #050505;
+}
+.btn-primary:active:hover,
+.btn-primary.active:hover,
+.open > .dropdown-toggle.btn-primary:hover,
+.btn-primary:active:focus,
+.btn-primary.active:focus,
+.open > .dropdown-toggle.btn-primary:focus,
+.btn-primary:active.focus,
+.btn-primary.active.focus,
+.open > .dropdown-toggle.btn-primary.focus {
+  background: #383838;
+  border: 1px solid #050505;
 }
 h1.blue-text {
   font-size: 22px;
@@ -263,6 +283,7 @@ nav .navbar-nav li:hover a {
 }
 footer {
   margin-top: 30px;
+  padding: 0;
   position: absolute;
   bottom: 0;
   left: 0;
