--- a/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
@@ -8,6 +8,9 @@
 
 {% block javascripts %}
   {{ parent() }}
+  <script src="{{ asset('bundles/app/js/mask.js') }}"></script>
+  <script>
+  </script>
 {% endblock %}
 
 {% block fos_user_content %}
