--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -645,3 +645,7 @@ nav .navbar-nav li.active a:hover{
     color: #FFFFFF;
     background: #fc113c;
 }
+.ya-share2__list{
+    margin-top: 2px;
+    width: 150px;
+}
