--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -54,7 +54,10 @@ a{
     background: #383838;
     border: 1px solid darken(#383838,20%);
 }
-
+.btn-primary:focus, .btn-primary.focus{
+    background: #383838;
+    border: 1px solid darken(#383838,20%);
+}
 
 
 //.blue-text{
