--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -22,6 +22,9 @@
         #form_start, #form_end{
             width: 130px;
         }
+        #form_specialty{
+            width: 250px;
+        }
     </style>
 {% endblock %}
 
