--- a/src/AppBundle/Resources/views/Publication/event.html.twig
+++ b/src/AppBundle/Resources/views/Publication/event.html.twig
@@ -53,7 +53,7 @@
                         <li><b>Контактная информация:</b> {{ event.contacts }}</li>
                     {% endif %}
                     {% if event.source != null %}
-                        <li><b>Сайт:</b> <a href="{{ event.source }}" target="_blank">Перейти</a></li>
+                        <li><b>Сайт:</b> <a href="{{ event.source }}" target="_blank">{{ event.source  }}</a></li>
                     {% endif %}
 
                 </ul>
