--- a/src/AppBundle/Resources/views/Publication/news.html.twig
+++ b/src/AppBundle/Resources/views/Publication/news.html.twig
@@ -10,7 +10,7 @@
 {% block content %}
     <div>
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-1">
+            <div class="col-xs-8">
                 <div class="title text-uppercase"><div>НОВОСТИ</div></div>
                 <div style="padding-left: 50px">
                     {% for n in news %}
