--- a/src/AppBundle/Resources/views/Publication/event.html.twig
+++ b/src/AppBundle/Resources/views/Publication/event.html.twig
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="col-xs-7 col-xs-offset-1" style="padding-right: 0">
+    <div class="col-xs-7" style="padding-right: 0">
         <br />
         <div class="row">
             <div class="col-xs-4">
