--- a/src/AppBundle/Resources/views/Publication/eventAdd.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventAdd.html.twig
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="col-xs-7 col-xs-offset-1" style="padding-right: 0">
+    <div class="col-xs-7" style="padding-right: 0">
         <h1 class="blue-text" style="margin-top: 0">Заявка на добавления события</h1>
         {{ form_start(form) }}
         {{ form_widget(form) }}
