--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -29,7 +29,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="col-lg-offset-1 col-lg-10" style="padding-right: 0">
+    <div class="col-xs-10" style="padding-right: 0">
         <div class="title"><div>{{ category }}</div></div>
         <div class="filter">
             <form class="form-inline">
