--- a/src/AppBundle/Resources/views/Publication/publication.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.html.twig
@@ -16,7 +16,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-xs-8 col-xs-offset-1" style="padding-right: 0">
+        <div class="col-xs-8" style="padding-right: 0">
             <div>
                 <div class="title"><div>{{ publication.title }}</div></div>
                 {% if publication.preview.path is defined  %}
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col-xs-3 text-right">
                         <div style="padding-top: 10px; padding-bottom: 6px">
-                            <span class="glyphicon glyphicon-calendar"></span> {{ publication.created | date('d.m.Y') }}
+                            {{ publication.created | date('d.m.Y') }}
                         </div>
                     </div>
                 </div>
