--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -104,17 +104,24 @@
             </div>
         {% endif %}
         {{ include('@App/menu.html.twig') }}
-        <div class="content">
-            {% block content %}
-                {#<div class="row">#}
-                    {#<div class="col-xs-9">#}
+        <div class="row">
+            <div class="col-sm-3">
+                {{ render(controller('AppBundle:Default:getUpcomingEvents')) }}
+            </div>
+            <div class="col-sm-9">
+                <div class="content">
+                    {% block content %}
+                        {#<div class="row">#}
+                        {#<div class="col-xs-9">#}
                         {#{% block content %}{% endblock %}#}
-                    {#</div>#}
-                    {#<div class="col-xs-3 text-right">#}
+                        {#</div>#}
+                        {#<div class="col-xs-3 text-right">#}
                         {#{{ render(controller("AppBundle:Widget:banner" )) }}#}
-                    {#</div>#}
-                {#</div>#}
-            {% endblock %}
+                        {#</div>#}
+                        {#</div>#}
+                    {% endblock %}
+                </div>
+            </div>
         </div>
     </div>
     <footer>
