--- a/src/AdminBundle/Resources/views/Publication/edit.html.twig
+++ b/src/AdminBundle/Resources/views/Publication/edit.html.twig
@@ -15,6 +15,30 @@
             <img src="{{ item.preview.path }}" style="max-width: 200px; display: inline-block" class="thumbnail">
             </div>
         {% endif %}
+        <div class="form-group">
+            <label class="col-sm-4 control-label required">Выберите файл</label>
+            <div class="col-sm-8">
+                <div class="file-container">
+                    <input type="file" name="ImageFile" id="ImageFile" class="fileAjax" {{ edit is not defined ? 'required' : '' }} >
+                    <br />
+                    <br />
+                    <div class="fileDoc">
+                        <img src="" brightness="0" contrast="0">
+                    </div>
+                    <div class="navigateFile">
+                        <button type="button" class="btn -btn-default rotateLeft"><span class="glyphicon glyphicon-chevron-left"></span></button>
+                        <button type="button" class="btn btn-default cropImage"><span class="glyphicon glyphicon-picture"></span></button>
+                        <button type="button" class="btn -btn-default rotateRight"><span class="glyphicon glyphicon-chevron-right"></span></button>
+                    </div>
+                    <input type="hidden" id="x1" name="x1">
+                    <input type="hidden" id="y1" name="y1">
+                    <input type="hidden" id="x2" name="x2">
+                    <input type="hidden" id="y2" name="y2">
+                    <input type="hidden" id="thumbail" name="thumbail">
+                    <input type="hidden" id="turn" name="turn" value="0">
+                </div>
+            </div>
+        </div>
         {{ form_start(form) }}
         {{ form_widget(form) }}
         {{ form_end(form) }}
@@ -22,7 +46,11 @@
 {% endblock %}
 
 {% block javascripts %}
+    <link href="{{ asset('bundles/admin/tapmodo-Jcrop/css/jquery.Jcrop.min.css') }}" rel="stylesheet" media="all">
     {{ parent() }}
+
+    <script src="{{ asset('bundles/admin/tapmodo-Jcrop/js/jquery.Jcrop.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/admin/js/file.js') }}"></script>
     <script>
         $(document).ready(function(){
             $("#publication_title").syncTranslit({
