--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -19,7 +19,6 @@ body {
   text-align: center;
   font-family: 'HelveticaNeue-Light';
   background: #EEEEEE;
-  min-height: 100%;
   margin: 0;
   overflow-x: hidden;
 }
@@ -80,15 +79,13 @@ h1.blue-text {
   margin: 0 auto;
   text-align: left;
   background: #FFFFFF;
-  height: 100%;
-  padding-bottom: 250px;
   position: relative;
-  display: inline-block;
 }
 .slider {
   overflow: hidden;
   margin-left: -15px;
   margin-right: -15px;
+  height: 270px;
 }
 .slider img {
   width: 100%;
@@ -289,7 +286,6 @@ nav .navbar-nav li:hover a {
 footer {
   margin-top: 30px;
   padding: 0;
-  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
