--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -25,7 +25,6 @@ body{
     text-align: center;
     font-family: 'HelveticaNeue-Light';
     background: #EEEEEE;
-    min-height: 100%;
     margin: 0;
     overflow-x: hidden;
 
@@ -85,16 +84,14 @@ h1.blue-text{
     margin: 0 auto;
     text-align: left;
     background: #FFFFFF;
-    height: 100%;
-    padding-bottom: 250px;
     position: relative;
-    display: inline-block;
 }
 .slider{
     //max-height: 400px;
     overflow: hidden;
     margin-left: -15px;
     margin-right: -15px;
+    height: 270px;
     img{
         width: 100%;
     }
@@ -317,7 +314,6 @@ nav .navbar-nav li:hover{
 footer{
     margin-top: 30px;
     padding: 0;
-    position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
