--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -8,8 +8,8 @@
     <script>
         $(document).ready(function(){
             $('.form-calendar').datetimepicker({
-            sideBySide: true,
-            format: "DD.MM.YYYY"
+                sideBySide: true,
+                format: "DD.MM.YYYY"
             });
         });
     </script>
@@ -32,36 +32,47 @@
     <div class="col-xs-10" style="padding-right: 0">
         <div class="title"><div>{{ category }}</div></div>
         <div class="filter">
-            <form class="form-inline">
-                с <div class="form-group">
-                    {{ form_widget(form.start) }} -
-                    {{ form_widget(form.end) }}
+            <form class="form">
+                <div class="row">
+
+                    <div class="form-group col-sm-6">
+                        {{ form_widget(form.search) }}
+                    </div>
+                    <div class="form-group col-sm-6">
+                        {{ form_widget(form.specialty) }}
+                    </div>
                 </div>
-                <div class="form-group">
-                    {{ form_widget(form.search) }}
-                </div>
-                <div class="form-group">
-                    {{ form_widget(form.specialty) }}
-                </div>
-                <div class="form-group" style="width: 325px;">
-                    {{ form_widget(form.submit) }}
-                    <a href="{{ path('event_add') }}" style="padding-left: 35px;">Добавить событие</a>
+                <div class="row">
+                    <div class="form-group col-sm-3">
+                        {{ form_widget(form.start) }}
+                    </div>
+                    <div class="form-group col-sm-3">
+                        {{ form_widget(form.end) }}
+                    </div>
+                    <div class="form-group  col-sm-6">
+                        {{ form_widget(form.submit) }}
+                        <a href="{{ path('event_add') }}" style="padding-left: 35px;">Добавить событие</a>
+                    </div>
                 </div>
             </form>
         </div>
-        <div>
-            {% for p in events %}
-                <div class="new-item">
+    </div>
+    <div>
+        {% for p in events %}
+            <div class="new-item">
                 <span style="padding-right: 20px; color: #888">
                     <span class="glyphicon glyphicon-calendar"></span>
                     {{ p.start | date('d.m.Y') }}{{ p.end != null ? ' - '~p.end | date('d.m.Y') : '' }}
                 </span>
-                    <a href="{{ path('event', {'url' : p.id }) }}"><span class="new-item-title">{{ p.title }}</span></a>
-                    <div class="new-item-anons">
-                        {{ p.body | anons | raw }}
-                    </div>
+                <a href="{{ path('event', {'url' : p.id }) }}"><span class="new-item-title">{{ p.title }}</span></a>
+                <div class="new-item-anons">
+                    {{ p.body | anons | raw }}
                 </div>
-            {% endfor %}
-        </div>
+            </div>
+        {% endfor %}
+        <nav>
+            {{ knp_pagination_render(events) }}
+        </nav>
+    </div>
     </div>
 {% endblock %}
