--- a/src/AppBundle/Resources/views/Publication/news.html.twig
+++ b/src/AppBundle/Resources/views/Publication/news.html.twig
@@ -39,6 +39,10 @@
                             </div>
                         {% endif %}
                     {% endfor %}
+
+                    <nav>
+                        {{ knp_pagination_render(news) }}
+                    </nav>
                 </div>
             </div>
             <div class="col-xs-3">
