--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -137,7 +137,10 @@
                         {#<a target="_blank" href="https://twitter.com/EuatInfo"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" class="social-icon"></a>#}
                         {#<a target="_blank" href="https://www.youtube.com/channel/UCgS0JAUqUpDojH6rIDXGfZA"><img src="{{ asset('bundles/app/images/icons/gp.png') }}" class="social-icon"></a>#}
                         {#<a target="_blank" href="http://ok.ru/group/57034519412770"><img src="{{ asset('bundles/app/images/icons/od.png') }}" class="social-icon"></a>#}
-                        <img src="{{ asset('bundles/app/images/icons/icons.png') }}">
+                        {#<img src="{{ asset('bundles/app/images/icons/icons.png') }}">#}
+                            <img src="{{ asset('bundles/app/images/icons/icons_1.png') }}">
+                            <img src="{{ asset('bundles/app/images/icons/icons_2.png') }}">
+                            <a href="https://www.facebook.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}"></a>
                     </div>
                 </div>
                 <div class="contacts row">
