--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -13,28 +13,36 @@
     <div class="collapse navbar-collapse" id="menu">
         <ul class="nav navbar-nav">
             <li {{ app.request.attributes.get('_route') == 'news' or app.request.attributes.get('_route') == 'homepage' ? 'class="active"' : ''}} ><a href="{{ path('news') }}">НОВОСТИ</a></li>
-            {#<li class=""><a href="{{ path('events',{'url': 'conference'}) }}">КОНФЕРЕНЦИИ</a></li>#}
-            {#<li>#}
-                {#<a href="{{ path('page',{'url' : 'about'}) }}">Об организации</a>#}
-                {#<div class="submenu">#}
-                    {#<ul class="submenu-items">#}
-                        {#<li><a href="">Цели и задачи</a></li>#}
-                    {#</ul>#}
-                {#</div>#}
-            {#</li>#}
-            <li {{ app.request.pathInfo == '/events/russian-events' ? 'class="active"' : ''}} ><a href="{{ path('events',{'url': 'russian-events'}) }}">РОССИЙСКИЕ МЕРОПРИЯТИЯ</a></li>
-            <li {{ app.request.pathInfo == '/events/foreign-events' ? 'class="active"' : ''}} >
-                <a href="{{ path('events',{'url': 'foreign-events'}) }}">ЗАГРАНИЧНЫЕ МЕРОПРИЯТИЯ</a>
+            <li {{ app.request.pathInfo == '/events' or app.request.pathInfo == '/events/russian-events' or app.request.pathInfo == '/events/foreign-events' ? 'class="active"' : ''}} >
+                <a href="{{ path('events') }}">Мероприятия</a>
+                <div class="submenu">
+                    <ul class="submenu-items">
+                        <li><a href="{{ path('events',{'url': 'russian-events'}) }}">Российские</a></li>
+                        <li><a href="{{ path('events',{'url': 'foreign-events'}) }}">Зарубежные</a></li>
+                    </ul>
+                </div>
             </li>
-            <li {{ app.request.pathInfo == '/events/fpdo-courses' ? 'class="active"' : ''}} >
-                <a href="{{ path('events',{'url': 'fpdo-courses'}) }}">КУРСЫ ФПДО</a>
+            <li {{ app.request.pathInfo == '/events/russian-events' or app.request.pathInfo == '/events/foreign-events' ? 'class="active"' : ''}} >
+                <a href="{{ path('page',{'url' : 'about'}) }}">Образование</a>
+                <div class="submenu">
+                    <ul class="submenu-items">
+                        <li><a href="{{ path('events',{'url': 'fpdo-courses'}) }}">КУРСЫ ФПДО</a></li>
+                        <li><a href="{{ path('events',{'url': 'online-courses'}) }}">ОНЛАЙН ОБУЧЕНИЕ</a></li>
+                        <li><a href="{{ path('events',{'url': 'internships'}) }}">СТАЖИРОВКИ</a></li>
+                    </ul>
+                </div>
             </li>
-            <li {{ app.request.pathInfo == '/events/online-courses' ? 'class="active"' : ''}} >
-                <a href="{{ path('events',{'url': 'online-courses'}) }}">ОНЛАЙН ОБУЧЕНИЕ</a>
+            <li {{ app.request.pathInfo == '/events/russian-events' or app.request.pathInfo == '/events/foreign-events' ? 'class="active"' : ''}} >
+                <a href="{{ path('page',{'url' : 'about'}) }}">Полезная информация</a>
+                <div class="submenu">
+                    <ul class="submenu-items">
+                        <li><a href="{{ path('events',{'url': 'russian-events'}) }}">Федеральные стандарты</a></li>
+                        <li><a href="{{ path('events',{'url': 'foreign-events'}) }}">Медицинские сокращения</a></li>
+                        <li><a href="{{ path('events',{'url': 'foreign-events'}) }}">Калькуляторы</a></li>
+                    </ul>
+                </div>
             </li>
-            <li {{ app.request.pathInfo == '/events/internships' ? 'class="active"' : ''}} >
-                <a href="{{ path('events',{'url': 'internships'}) }}">СТАЖИРОВКИ</a>
-            </li>
+            <li {{ app.request.attributes.get('_route') == 'feedback' ? 'class="active"' : ''}} ><a href="{{ path('feedback') }}">СВЯЗАТЬСЯ</a></li>
         </ul>
     </div><!-- /.navbar-collapse -->
 </nav>
