fixed styles bug in FOS

--- a/app/Resources/FOSUserBundle/views/Resetting/reset.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/reset.html.twig
@@ -10,7 +10,7 @@
 	{% endif %}
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-offset-3 col-sm-6">
+			<div class="col-sm-6">
 				<div class="registration" style="margin-top: 20px;">
 					<div class="box-login">
 						<div class="lost-field-box">
