--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -4,7 +4,7 @@
     <div class="greenLine"></div>
     <div class="container">
         <div class="row">
-            <div class="col-sm-offset-3 col-sm-6">
+            <div class="col-sm-6">
 
                 <div class="registration container-fluid">
                     {#<div class="socBnts top">#}
