--- a/src/AppBundle/Resources/views/Publication/event.html.twig
+++ b/src/AppBundle/Resources/views/Publication/event.html.twig
@@ -18,10 +18,12 @@
     <div class="col-xs-7" style="padding-right: 0">
         <br />
         <div class="row">
-            <div class="col-xs-4">
-                <img src="{{ event.preview.path }}" class="img-thumbnail">
-            </div>
-            <div class="col-xs-6">
+            {% if event.preview.path is defined %}
+                <div class="col-xs-4">
+                        <img src="{{ event.preview.path }}" class="img-thumbnail">
+                </div>
+            {% endif %}
+            <div class="col-xs-{{ event.preview.path is defined ? '6' : '10' }}">
                 <h1 class="blue-text" style="margin-top: 0">{{ event.title }}</h1>
                 <ul class="event-params">
                     {% if event.specialties | length > 0 %}
@@ -69,7 +71,12 @@
             <div class="col-xs-8" style="padding-top: 5px;">
                 <script type="text/javascript" src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js" charset="utf-8"></script>
                 <script type="text/javascript" src="//yastatic.net/share2/share.js" charset="utf-8"></script>
-                <span class="ya-share2" data-services="vkontakte,facebook,odnoklassniki,gplus,twitter" data-counter="" style="text-align: left; "></span>
+                <div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki,gplus,twitter" data-counter="" style="text-align: left; "
+                     data-title="{{ event.title }}"
+                     data-description="{{ event.anons is defined ? event.anons : ''}}"
+                     data-image="{{ event.preview.path is defined ? event.preview.path : '' }}"
+                >
+                </div>
             </div>
         </div>
     </div>
