--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -18,7 +18,7 @@ html {
 body {
   text-align: center;
   font-family: 'HelveticaNeue-Light';
-  background: #EEEEEE;
+  background: url("/bundles/app/images/light_toast.png");
   margin: 0;
   overflow-x: hidden;
 }
