--- a/src/AppBundle/Resources/views/Publication/event.html.twig
+++ b/src/AppBundle/Resources/views/Publication/event.html.twig
@@ -15,16 +15,15 @@
 {% endblock %}
 
 {% block content %}
-    <div class="col-xs-7" style="padding-right: 0">
-        <br />
+    <div class="col-sm-12">
         <div class="row">
+            <div class="title"><div>{{ event.title }}</div></div>
             {% if event.preview.path is defined %}
                 <div class="col-xs-4">
                         <img src="{{ event.preview.path }}" class="img-thumbnail">
                 </div>
             {% endif %}
             <div class="col-xs-{{ event.preview.path is defined ? '6' : '10' }}">
-                <h1 class="blue-text" style="margin-top: 0">{{ event.title }}</h1>
                 <ul class="event-params">
                     {% if event.specialties | length > 0 %}
                         <li><b>Специальности:</b>
@@ -78,23 +77,6 @@
                 >
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="col-xs-3">
-        <div style="max-width: 240px; float: right;" class="text-left">
-            {% if importants | length > 0 %}
-                <div class="title"><div>ВАЖНЫЕ СОБЫТИЯ</div></div>
-                {% for i in importants %}
-                    <div class="calendar">
-                        <div class="date">{{ i.datetime | date('d.m.Y') }}</div>
-                        <div class="annotate">
-                            {#{{ i.type }}<br />#}
-                            {{ i.title }}
-                        </div>
-                    </div>
-                {% endfor %}
-            {% endif %}
-            {{ render(controller("AppBundle:Widget:banner" )) }}
         </div>
     </div>
 
