--- a/src/AppBundle/Resources/views/Publication/page.html.twig
+++ b/src/AppBundle/Resources/views/Publication/page.html.twig
@@ -1,8 +1,8 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block content %}
-    <div class="col-lg-offset-1 col-lg-10 text-uppercase" style="padding-right: 0">
-        <div class="title"><div>{{ page.title }}</div></div>
+    <div class="col-sm-12" style="padding-right: 0">
+        <div class="title"><div class="text-uppercase">{{ page.title }}</div></div>
         <div>
             {{ page.body | raw }}
         </div>
