--- a/src/AppBundle/Resources/views/Default/feedback.html.twig
+++ b/src/AppBundle/Resources/views/Default/feedback.html.twig
@@ -1,49 +1,53 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block content %}
-    <div class="col-md-8">
-        <div class="title"><div>Связь с администрацией сайта</div></div>
-
-        <form class="form-horizontal" role="form">
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Ваше имя</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" value="">
+    <div class="title"><div>Связь с администрацией сайта</div></div>
+    <br />
+    <br />
+    <div class="row">
+        <div class="col-md-offset-2 col-md-8">
+            <form class="form-horizontal" role="form">
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Ваше имя</label>
+                    <div class="col-sm-9">
+                        <input class="form-control" type="text" value="">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Ваш email</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" value="">
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Ваш email</label>
+                    <div class="col-sm-9">
+                        <input class="form-control" type="text" value="">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Ваш телефон</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" value="">
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Ваш телефон</label>
+                    <div class="col-sm-9">
+                        <input class="form-control" type="text" value="">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Тип обращения</label>
-                <div class="col-sm-9">
-                    <select class="form-control">
-                        <option value="Сотрудничество">Сотрудничество</option>
-                        <option value="Техническая поддержка">Техническая поддержка</option>
-                    </select>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Тип обращения</label>
+                    <div class="col-sm-9">
+                        <select class="form-control">
+                            <option value="Добавление мероприятия">Добавление мероприятия</option>
+                            <option value="Сотрудничество">Сотрудничество</option>
+                            <option value="Техническая поддержка">Техническая поддержка</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Сообщение</label>
-                <div class="col-sm-9">
-                    <textarea class="form-control"></textarea>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Сообщение</label>
+                    <div class="col-sm-9">
+                        <textarea class="form-control"></textarea>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-3 col-sm-9">
-                    <button type="submit" class="btn btn-primary">Отправить</button>
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-9">
+                        <button type="submit" class="btn btn-primary">Отправить</button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 {% endblock %}
 
