--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -29,7 +29,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="col-xs-10" style="padding-right: 0">
+    <div class="col-sm-12">
         <div class="title"><div>{{ category }}</div></div>
         <div class="filter">
             <form class="form">
@@ -51,13 +51,11 @@
                     </div>
                     <div class="form-group  col-sm-6">
                         {{ form_widget(form.submit) }}
-                        <a href="{{ path('event_add') }}" style="padding-left: 35px;">Добавить событие</a>
+                        {#<a href="{{ path('event_add') }}" style="padding-left: 35px;">Добавить событие</a>#}
                     </div>
                 </div>
             </form>
         </div>
-    </div>
-    <div>
         {% for p in events %}
             <div class="new-item">
                 <span style="padding-right: 20px; color: #888">
@@ -73,6 +71,5 @@
         <nav>
             {{ knp_pagination_render(events) }}
         </nav>
-    </div>
     </div>
 {% endblock %}
