--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -44,8 +44,8 @@
                     </div>
                 </div>
             {% endfor %}
-            <div class="text-right">
-                <a href="{{ path('news') }}"><b>Читать все</b></a>
+            <div class="text-left">
+                <a href="{{ path('news') }}"><b>Читать все новости медицины</b></a>
             </div>
         </div>
     </div>
