--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -232,13 +232,14 @@ nav{
                         //background: #004889;
                         text-align: left;
                         display: block;
-                        padding: 5px;
                         a{
                             display: block;
-                            padding: 5px 10px;
+                            padding: 10px 15px;
                             color: #333;
+                            background: #DDD;
                             &:hover{
                                 color: @color-red;
+                                background: #CCC;
                             }
                         }
                     }
