--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -625,6 +625,7 @@ th.prev, th.next, th.picker-switch{
             text-align: right;
             img{
                 width: 90%;
+                height: 135px;
                 -webkit-filter: grayscale(100%);
                 filter: grayscale(100%);
                 -moz-filter: grayscale(100%);
