--- a/src/AppBundle/Resources/views/Info/standards.html.twig
+++ b/src/AppBundle/Resources/views/Info/standards.html.twig
@@ -1,4 +1,4 @@
-{% extends layout | default(is_granted('IS_AUTHENTICATED_REMEMBERED') ? 'EvrikaMainBundle::logged_layout.html.twig' : 'EvrikaMainBundle::guest_layout.html.twig') %}
+{% extends '@App/layout.html.twig' %}
 
 
 {% block stylesheets %}
@@ -11,20 +11,20 @@
 {% endblock %}
 
 
-{% block body %}
+{% block content %}
     {% if standartsCategory is defined %}
-        <h1>Федеральные стандарты</h1>
-        <p>Стандарт оказания медицинской помощи призван указать модель пациента, область и условия применения
-            стандарта, способ лечения с указанием конкретных рекомендаций по использованию технических и
-            медикаментозных средств. Стандарт предназначен для обязательного исполнения в системе здравоохранения.
-            Внедрение Стандартов упорядочивает предоставление лечебной помощи населению, способствует повышению
-            прозрачности затрат на здравоохранение, повышает общий уровень медицинской помощи. Наличие Стандартов,
-            как элементов законодательной базы в сфере медицинских услуг, имеет большое значение в определении прав,
-            а также области ответственности пациентов и врачей.</p>
+        <div class="title"><div>Федеральные стандарты</div></div>
+        {#<p>Стандарт оказания медицинской помощи призван указать модель пациента, область и условия применения#}
+            {#стандарта, способ лечения с указанием конкретных рекомендаций по использованию технических и#}
+            {#медикаментозных средств. Стандарт предназначен для обязательного исполнения в системе здравоохранения.#}
+            {#Внедрение Стандартов упорядочивает предоставление лечебной помощи населению, способствует повышению#}
+            {#прозрачности затрат на здравоохранение, повышает общий уровень медицинской помощи. Наличие Стандартов,#}
+            {#как элементов законодательной базы в сфере медицинских услуг, имеет большое значение в определении прав,#}
+            {#а также области ответственности пациентов и врачей.</p>#}
 
         <p>Типовой стандарт может включать в себя следующие главы:</p>
 
-        <ul>
+        <ul style="list-style: disc; margin-left: 50px">
             <li>указание вида медицинской помощи (первичная медико-санитарная, специализированная, скорая), при
                 котором используется Стандарт;
             </li>
@@ -38,19 +38,18 @@
             </li>
         </ul>
 
-        <h2>Области применения стандартов:</h2>
-
+        <h3>Области применения стандартов:</h3>
 
         <ul>
             {% for cat in standartsCategory %}
                 <li class="fcategory"
-                    style="color: #00626a; cursor: pointer; list-style-type: none; padding: 10px 20px; border-bottom: 1px solid #00626a; border-collapse: collapse;">
+                    style="color: #fc113c; cursor: pointer; list-style-type: none; padding: 10px 20px; border-bottom: 1px solid #ccc; border-collapse: collapse;">
                     <b>{{ cat.title }}</b>
                     <ul id="fstands{{ cat.id }}" style="display: none;">
                         {% if cat.id is defined and cat.id is not null %}
                             {% if attribute(standarts, cat.id) %}
                                 {% for stand in standarts[cat.id][0] %}
-                                    <li>
+                                    <li style="margin-left: 50px; list-style-type: decimal; padding-top: 10px">
                                         <a href="{{ path('showstandards',{'id': stand['id']}) }}"
                                            style="text-decoration: none;">{{ stand['title'] | raw }}</a>
                                     </li>
