--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -33,10 +33,10 @@
                 </div>
             </li>
             <li >
-                <a href="{{ path('page',{'url' : 'about'}) }}">Полезная информация</a>
+                <a href="#">Полезная информация</a>
                 <div class="submenu">
                     <ul class="submenu-items">
-                        <li><a href="#">Федеральные стандарты</a></li>
+                        <li><a href="{{ path('federal-standards') }}">Федеральные стандарты</a></li>
                         <li><a href="#">Медицинские сокращения</a></li>
                         <li><a href="#">Калькуляторы</a></li>
                     </ul>
