--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -37,7 +37,7 @@
                 <div class="submenu">
                     <ul class="submenu-items">
                         <li><a href="{{ path('federal-standards') }}">Федеральные стандарты</a></li>
-                        <li><a href="#">Медицинские сокращения</a></li>
+                        <li><a href="{{ path('abbreviations') }}">Медицинские сокращения</a></li>
                         <li><a href="#">Калькуляторы</a></li>
                     </ul>
                 </div>
