--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -57,7 +57,7 @@
                         <div class="item-param">
                             {{ p.created | date('d.m.Y') }}
                         </div>
-
+                    </div>
                         {% endif %}
                 </div>
             {% endfor %}
